# ostrich-neck

./: README.md  dynamixel_controller.py  keyboard_control.py  pyproject.toml
src/ostrich_neck/: __init__.py  controller.py  conversion.py  hardware.py
src/ostrich_neck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
